--- a/src/virt-manager.glade
+++ b/src/virt-manager.glade
@@ -49,11 +49,35 @@
 		      <property name="label" translatable="yes">New machine...</property>
 		      <property name="use_underline">True</property>
 		      <signal name="activate" handler="on_menu_file_new_activate" last_modification_time="Tue, 28 Mar 2006 17:06:34 GMT"/>
+		      <accelerator key="n" modifiers="GDK_MOD1_MASK" signal="activate"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image42">
+			<widget class="GtkImage" id="image65">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-new</property>
+			  <property name="icon_size">1</property>
+			  <property name="xalign">0.5</property>
+			  <property name="yalign">0.5</property>
+			  <property name="xpad">0</property>
+			  <property name="ypad">0</property>
+			</widget>
+		      </child>
+		    </widget>
+		  </child>
+
+		  <child>
+		    <widget class="GtkImageMenuItem" id="restore_saved">
+		      <property name="visible">True</property>
+		      <property name="tooltip" translatable="yes">Restore a saved machine from a filesystem image</property>
+		      <property name="label" translatable="yes">Restore saved machine...</property>
+		      <property name="use_underline">True</property>
+		      <signal name="activate" handler="on_menu_restore_saved_activate" last_modification_time="Wed, 19 Jul 2006 18:10:04 GMT"/>
+		      <accelerator key="r" modifiers="GDK_MOD1_MASK" signal="activate"/>
+
+		      <child internal-child="image">
+			<widget class="GtkImage" id="image66">
+			  <property name="visible">True</property>
+			  <property name="stock">gtk-open</property>
 			  <property name="icon_size">1</property>
 			  <property name="xalign">0.5</property>
 			  <property name="yalign">0.5</property>
@@ -78,7 +102,7 @@
 		      <signal name="activate" handler="on_menu_file_open_connection_activate" last_modification_time="Mon, 12 Jun 2006 20:34:47 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image43">
+			<widget class="GtkImage" id="image67">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-connect</property>
 			  <property name="icon_size">1</property>
@@ -136,7 +160,7 @@
 		      <signal name="activate" handler="on_menu_edit_details_activate" last_modification_time="Tue, 28 Mar 2006 17:06:34 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image44">
+			<widget class="GtkImage" id="image68">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-properties</property>
 			  <property name="icon_size">1</property>
@@ -157,7 +181,7 @@
 		      <signal name="activate" handler="on_menu_edit_delete_activate" last_modification_time="Tue, 28 Mar 2006 17:06:34 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image45">
+			<widget class="GtkImage" id="image69">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-delete</property>
 			  <property name="icon_size">1</property>
@@ -3265,7 +3289,7 @@ Inactive virtual machines</property>
   </child>
 </widget>
 
-<widget class="GtkWindow" id="vmm-save-progress">
+<widget class="GtkWindow" id="vmm-progress">
   <property name="visible">True</property>
   <property name="title" translatable="yes">Saving VM Image</property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
@@ -3290,7 +3314,7 @@ Inactive virtual machines</property>
       <child>
 	<widget class="GtkLabel" id="label94">
 	  <property name="visible">True</property>
-	  <property name="label" translatable="yes">Please wait while the VM image saves...</property>
+	  <property name="label" translatable="yes">Please wait...</property>
 	  <property name="use_underline">False</property>
 	  <property name="use_markup">False</property>
 	  <property name="justify">GTK_JUSTIFY_LEFT</property>
